--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                     <h2 class="text-center">My academic career</h2>
                 </div>
                 <div class="row">
-                    <div class="card col-3 text-dark bg-light mx-auto">
+                    <div class="card col-sm-11 col-lg-3 text-dark bg-light mx-auto my-3">
                         <div class="card-body">
                             <h5 class="card-title">GPA</h5>
                             <p class="card-text"><strong>3.91</strong> out of 4.0</p>
                         </div>
                     </div>
-                    <div class="card col-3 text-dark bg-light mx-auto">
+                    <div class="card col-sm-11 col-lg-3 text-dark bg-light mx-auto my-3">
                         <div class="card-body">
                             <h5 class="card-title">Degrees</h5>
                             <ul class="list-group">
@@ -71,7 +71,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="card col-3 text-dark bg-light mx-auto">
+                    <div class="card col-sm-11 col-lg-3 text-dark bg-light mx-auto my-3">
                         <div class="card-body">
                             <h5 class="card-title">Relevant Course Work</h5>
                             <ul class="list-group">
