--- a/index.html
+++ b/index.html
@@ -6,39 +6,59 @@
         <title>Tristan Kensinger</title>
 
         <!-- css links -->
-        <link rel="stylesheet" href="./public/css/main.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="./public/css/main.css">
+
+        <!-- js links -->
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js" defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" defer integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" defer integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+        <script src="./public/js/script.js" defer></script>
     </head>
 
     <body>
         <!-- navigation -->
-        <nav class="navbar navbar-expand-lg fixed-top bg-dark navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <a class="navbar-brand" href="./index.html">Tristan Kensinger</a>
+                
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a href="./index.html" class="nav-link">About</a></li>
-                        <li class="nav-item"><a href="./resume.html" class="nav-link">Resume</a></li>
+                        <li class="nav-item mx-auto">
+                            <a class="nav-link active" aria-current="page" href="./index.html">About</a>
+                        </li>
+                        <li class="nav-item mx-auto">
+                            <a class="nav-link" href="./resume.html">Resume</a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
 
-        <!-- intro -->
-        <section id="intro">
-            <div class="container-fluid bg-light text-dark p-5">
-                <div class="card mx-auto bg-dark text-light" style="width: 18rem;">
-                    <img class="card-img-top" src="./public/imgs/profilePic.jpg" alt="a picture of Tristan Kensinger smiling">
-                    <div class="card-body">
-                        <h5 class="card-title">Hi, I am <strong>Tristan Kensinger</strong></h5>
-                        <p class="card-text">Computer Science Student</p>
-                    </div>
+        <!-- landing -->
+        <div class="container-fluid bg-light text-dark landing">
+            <div class="row">
+                <div class="col-lg-6 order-1 landing-text">
+                    <h1>Hi, I am <strong>Tristan!</strong></h1>
+                    <h3>Aspiring Software Engineer and Web Developer</h3>
+                    <p>
+                        I am currently a senior studying Computer Science at Stevens Institute of Technology
+                        with my expected graduation in December 2022.
+                    </p>
+                    <p>
+
+                    </p>
+                </div>
+                <div class="col-lg-6 order-lg-1 d-flex justify-content-center">
+                    <img src="./public/imgs/profilePic.jpg" class="img-fluid landing-img" alt="image of tristan smiling">
                 </div>
             </div>
-        </section>
+        </div>
 
         <!-- footer -->
         <footer class="bg-light text-center text-dark pb-3">
@@ -81,11 +101,5 @@
                 <i class="bi bi-envelope"> tkensing@stevens.edu</i>
             </div>
         </footer>
-
-        <!-- js links -->
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-        <script src="./public/js/script.js"></script>
     </body>
 </html>
