Landing page text and social icons

--- a/index.html
+++ b/index.html
@@ -51,7 +51,20 @@
                         with my expected graduation in December 2022.
                     </p>
                     <p>
-
+                        Upon graduation I will be completing my Master's degree in Computer Science and Machine
+                        Learning at Stevens Institute of Technology with my graduate graduation in December 2023.
+                    </p>
+                    <p>
+                        Over my academic career I have become very passionate in web development and plan on
+                        pursuing a similar role in my future.
+                    </p>
+                    <p>
+                        Feel free to contact me using one of my socials below or by emailing me at
+                        <a href="mailto:tristan.kensinger@gmail.com">tristan.kensinger@gmail.com.</a>
+                    </p>
+                    <p class="landing-socials">
+                        <a href="https://github.com/TristanKensinger"><i class="bi bi-github"></i></a>
+                        <a href="https://www.linkedin.com/in/tristan-kensinger/"><i class="bi bi-linkedin"></i></a>
                     </p>
                 </div>
                 <div class="col-lg-6 order-lg-1 d-flex justify-content-center">
@@ -59,47 +72,5 @@
                 </div>
             </div>
         </div>
-
-        <!-- footer -->
-        <footer class="bg-light text-center text-dark pb-3">
-            <div class="row">
-                <h2 class="text-center">Contacts</h2>
-            </div>
-            <div class="row justify-content-center">
-                <!-- email -->
-                <a
-                    class="btn btn-primary btn-floating m-1 col-1"
-                    style="background-color: #dd4b39;"
-                    href="mailto:tkensing@stevens.edu"
-                    role="button"
-                >
-                    <i class="bi bi-envelope"></i>
-                </a>
-                <!-- github -->
-                <a
-                    class="btn btn-primary btn-floating m-1 col-1"
-                    style="background-color: #333333;"
-                    href="https://github.com/TristanKensinger"
-                    role="button"
-                >
-                    <i class="bi bi-github"></i>
-                </a>
-                <!-- linkedin -->
-                <a
-                    class="btn btn-primary btn-floating m-1 col-1"
-                    style="background-color: #0082ca;"
-                    href="https://www.linkedin.com/in/tristan-kensinger/"
-                    role="button"
-                >
-                    <i class="bi bi-linkedin"></i>
-                </a>
-            </div>
-            <div class="row justify-content-center">
-                <i class="bi bi-telephone"> 570-688-7860</i>
-            </div>
-            <div class="row justify-content-center">
-                <i class="bi bi-envelope"> tkensing@stevens.edu</i>
-            </div>
-        </footer>
     </body>
 </html>
