--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         Aspiring Software Engineer and Web Developer
                     </h3>
                     <div class="subheading mb-5">
-                        161 Cardinal Rd · Cresco, PA 18326 · (570) 688-7860 ·
+                        New York City Metropolitan Area · (570) 688-7860 ·
                         <a href="mailto:tristan.kensinger@gmail.com">tristan.kensinger@gmail.com</a>
                     </div>
                     <p class="lead">
